--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.0", features = ["full"] }
-reqwest = "0.12.4"
+log = { version = "0.4.20", features = ["kv_unstable"] }
 structopt = "0.3"
-futures = "0.3"
+env_logger = "0.11.3"
