--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 log = { version = "0.4.20", features = ["kv_unstable"] }
 structopt = "0.3"
 env_logger = "0.11.3"
+thiserror = "1.0.59"
