--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ log = { version = "0.4.20", features = ["kv_unstable"] }
 structopt = "0.3"
 env_logger = "0.11.3"
 thiserror = "1.0.59"
+url = "2.5.0"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
